--- a/css/style.sass
+++ b/css/style.sass
@@ -1,4 +1,23 @@
+@font-face
+  font-family: 'ppmi'
+  src: url('../fonts/PPNeueMachina-InktrapRegular.eot')
+  src: url('../fonts/PPNeueMachina-InktrapRegular.eot?#iefix') format("embedded-opentype"), url('../fonts/PPNeueMachina-InktrapRegular.woff2') format("woff2"), url('../fonts/PPNeueMachina-InktrapRegular.woff') format("woff"), url('../fonts/PPNeueMachina-InktrapRegular.ttf') format("truetype"), url('../fonts/PPNeueMachina-InktrapRegular.otf') format("otf")
+  font-weight: 400
+
+@font-face
+  font-family: 'ppmp'
+  src: url('../fonts/PPNeueMachina-PlainRegular.eot')
+  src: url('../fonts/PPNeueMachina-PlainRegular.eot?#iefix') format("embedded-opentype"), url('../fonts/PPNeueMachina-PlainRegular.woff2') format("woff2"), url('../fonts/PPNeueMachina-PlainRegular.woff') format("woff"), url('../fonts/PPNeueMachina-PlainRegular.ttf') format("truetype"), url('../fonts/PPNeueMachina-PlainRegular.otf') format("otf")
+  font-weight: 400
+
+@font-face
+  font-family: 'ppmi'
+  src: url('../fonts/PPNeueMachina-InktrapUltrabold.eot')
+  src: url('../fonts/PPNeueMachina-InktrapUltrabold.eot?#iefix') format("embedded-opentype"), url('../fonts/PPNeueMachina-InktrapUltrabold.woff2') format("woff2"), url('../fonts/PPNeueMachina-InktrapUltrabold.woff') format("woff"), url('../fonts/PPNeueMachina-InktrapUltrabold.ttf') format("truetype"), url('../fonts/PPNeueMachina-InktrapUltrabold.otf') format("otf")
+  font-weight: 800
+
 body
     margin: 0
     padding: 0
     background-color: #080715
+    color: #fff
