--- a/css/style.sass
+++ b/css/style.sass
@@ -22,7 +22,8 @@
 body
   margin: 0
   padding: 0
-  background-color: #080715
+  padding-bottom: 100px
+  background: #080715 url(../img/noise.png)
   color: #fff
 
 .container
@@ -115,7 +116,6 @@ body
 
 .main
   padding-top: 508px
-  background: url(../img/noise.png)
 
 .hero
   &-title
@@ -135,7 +135,7 @@ body
   font-size: 64px
   line-height: 66px
 
-.section-description
+.section-body
   font-family: 'ppmi', sans-serif
   font-size: 18px
   line-height: 150%
@@ -356,3 +356,48 @@ body
         width: 100%
         background: linear-gradient(to right, #D402E6, #050BE3, #02D0E0)
         background-size: 130%
+
+.inline-title
+  display: inline
+
+.free
+  margin: 300px 0
+  display: flex
+  justify-content: center
+  &-inner
+    display: flex
+    align-items: center
+    justify-content: space-between
+    max-width: 1237px
+    width: 100%
+  a
+    margin: 0
+
+.footer
+  &-inner
+    //Временное решение
+    border: 1px solid #0500FF
+    border-radius: 15px
+
+    padding: 40px 170px 40px 60px
+    display: flex
+    align-items: center
+  &-block
+    display: flex
+    flex-direction: column
+    align-items: flex-start
+    &:nth-child(2)
+      margin-left: 220px
+    &:nth-child(3)
+      margin-left: auto
+    .opacity-color
+      opacity: .4
+      text-decoration: none
+      color: inherit
+  &-item
+    color: inherit
+    text-decoration: none
+  &-item + &-item
+    margin-top: 15px
+  .logo
+    margin-bottom: 22px
