--- a/css/style.sass
+++ b/css/style.sass
@@ -23,7 +23,7 @@ body
   margin: 0
   padding: 0
   padding-bottom: 100px
-  background: #080715 url(../img/noise.png)
+  background: #080715
   color: #fff
 
 .container
@@ -401,3 +401,23 @@ body
     margin-top: 15px
   .logo
     margin-bottom: 22px
+
+.background
+  position: absolute
+
+  &__noise
+    background-image: url('../img/noise.png')
+
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-repeat: repeat
+    background-size: 100px
+    opacity: 1
+    mix-blend-mode: overlay
+
+  &__figure
+    z-index: -1
+    position: relative
