--- a/css/style.css
+++ b/css/style.css
@@ -482,15 +482,11 @@ body {
   position: absolute;
 }
 .background__noise {
-  background-image: url("../img/noise.png");
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-repeat: repeat;
-  background-size: 100px;
-  opacity: 1;
+  opacity: 0.4;
+  z-index: 2;
   mix-blend-mode: overlay;
 }
 .background__figure {
