--- a/css/style.sass
+++ b/css/style.sass
@@ -407,15 +407,15 @@ body
 
   &__noise
     background-image: url('../img/noise.png')
-
-    position: absolute
+    position: fixed
     top: 0
     left: 0
-    width: 100%
-    height: 100%
+    width: 100vw
+    height: 100vh
     background-repeat: repeat
     background-size: 100px
     opacity: 1
+    z-index: 2
     mix-blend-mode: overlay
 
   &__figure
