--- a/css/style.sass
+++ b/css/style.sass
@@ -406,18 +406,34 @@ body
   position: absolute
 
   &__noise
-    background-image: url('../img/noise.png')
     position: fixed
-    top: 0
-    left: 0
-    width: 100vw
-    height: 100vh
-    background-repeat: repeat
     background-size: 100px
-    opacity: 1
+    opacity: 0.5
     z-index: 2
     mix-blend-mode: overlay
 
-  &__figure
+  &__figures
+    position: absolute
     z-index: -1
-    position: relative
+    animation: myAnim 2s ease 0s 1 normal forwards
+
+  &__figure
+    position: absolute
+    &_1
+      translate: 23vw -12vh
+      z-index: 3
+    &_2
+      translate: 45.9vw -5.4vh
+      z-index: 2
+    &_3
+      translate: 53.3vw 9.4vh
+      z-index: 1
+
+  &__primary,
+  &__secondary
+    position: absolute
+    filter: blur(125px)
+
+  &__primary
+    mix-blend-mode: color-dodge
+    z-index: 1
