--- a/css/style.css
+++ b/css/style.css
@@ -483,49 +483,47 @@ body {
 }
 .background__noise {
   position: fixed;
-  background-size: 100px;
-  opacity: 0.5;
+  opacity: 0.4;
+  scale: 1.3;
   z-index: 2;
   mix-blend-mode: overlay;
 }
 .background__figures {
   position: absolute;
   z-index: -1;
-  -webkit-animation: myAnim 2s ease 0s 1 normal forwards;
-          animation: myAnim 2s ease 0s 1 normal forwards;
 }
 .background__figure {
   position: absolute;
 }
 .background__figure_1 {
-  translate: 23vw -12vh;
   z-index: 3;
   fill: #BD00FF;
+  -webkit-animation: figureAnim1 15s infinite ease-out;
+          animation: figureAnim1 15s infinite ease-out;
 }
 .background__figure_2 {
-  translate: 45.9vw -5.4vh;
   z-index: 2;
   fill: #0500FF;
+  -webkit-animation: figureAnim2 15s infinite ease-out;
+          animation: figureAnim2 15s infinite ease-out;
 }
 .background__figure_3 {
-  translate: 53.3vw 9.4vh;
   z-index: 1;
   fill: #00F0FF;
+  -webkit-animation: figureAnim3 15s infinite ease-out;
+          animation: figureAnim3 15s infinite ease-out;
 }
 .background__secondary .background__figure_1 {
-  translate: 23vw -12vh;
   z-index: 3;
   background: rgba(189, 0, 255, 0.4);
   fill: #BD00FF;
 }
 .background__secondary .background__figure_2 {
-  translate: 45.9vw -5.4vh;
   z-index: 2;
   background: rgba(5, 0, 255, 0.5);
   fill: #0500FF;
 }
 .background__secondary .background__figure_3 {
-  translate: 53.3vw 9.4vh;
   z-index: 1;
   background: rgba(0, 240, 255, 0.6);
   fill: #00F0FF;
@@ -537,4 +535,116 @@ body {
 .background__primary {
   mix-blend-mode: color-dodge;
   z-index: 1;
+}
+
+@-webkit-keyframes figureAnim1 {
+  0% {
+    translate: 23vw -12vh;
+  }
+  25% {
+    translate: 26vw 21vh;
+  }
+  50% {
+    translate: 16vw 17vh;
+  }
+  75% {
+    translate: 26vw 21vh;
+  }
+  100% {
+    translate: 23vw -12vh;
+  }
+}
+
+@keyframes figureAnim1 {
+  0% {
+    translate: 23vw -12vh;
+  }
+  25% {
+    translate: 26vw 21vh;
+  }
+  50% {
+    translate: 16vw 17vh;
+  }
+  75% {
+    translate: 26vw 21vh;
+  }
+  100% {
+    translate: 23vw -12vh;
+  }
+}
+@-webkit-keyframes figureAnim2 {
+  0% {
+    translate: 45.9vw -5.4vh;
+  }
+  25% {
+    translate: 20.9vw 33.6vh;
+    transform: rotate(-66deg);
+  }
+  50% {
+    translate: 30.3vw 29vh;
+    transform: rotate(36deg);
+  }
+  75% {
+    translate: 20.9vw 33.6vh;
+    transform: rotate(-66deg);
+  }
+  100% {
+    translate: 45.9vw -5.4vh;
+  }
+}
+@keyframes figureAnim2 {
+  0% {
+    translate: 45.9vw -5.4vh;
+  }
+  25% {
+    translate: 20.9vw 33.6vh;
+    transform: rotate(-66deg);
+  }
+  50% {
+    translate: 30.3vw 29vh;
+    transform: rotate(36deg);
+  }
+  75% {
+    translate: 20.9vw 33.6vh;
+    transform: rotate(-66deg);
+  }
+  100% {
+    translate: 45.9vw -5.4vh;
+  }
+}
+@-webkit-keyframes figureAnim3 {
+  0% {
+    translate: 53.3vw 9.4vh;
+  }
+  25% {
+    translate: 30.3vw 25.4vh;
+  }
+  50% {
+    translate: 27.7vw 36.9vh;
+    transform: rotate(-117deg);
+  }
+  75% {
+    translate: 30.3vw 25.4vh;
+  }
+  100% {
+    translate: 53.3vw 9.4vh;
+  }
+}
+@keyframes figureAnim3 {
+  0% {
+    translate: 53.3vw 9.4vh;
+  }
+  25% {
+    translate: 30.3vw 25.4vh;
+  }
+  50% {
+    translate: 27.7vw 36.9vh;
+    transform: rotate(-117deg);
+  }
+  75% {
+    translate: 30.3vw 25.4vh;
+  }
+  100% {
+    translate: 53.3vw 9.4vh;
+  }
 }/*# sourceMappingURL=style.css.map */
