--- a/css/style.sass
+++ b/css/style.sass
@@ -413,44 +413,40 @@ body
 
   &__noise
     position: fixed
-    background-size: 100px
-    opacity: 0.5
+    opacity: 0.4
+    scale: 1.3
     z-index: 2
     mix-blend-mode: overlay
 
   &__figures
     position: absolute
     z-index: -1
-    animation: myAnim 2s ease 0s 1 normal forwards
 
   &__figure
     position: absolute
     &_1
-      translate: 23vw -12vh
       z-index: 3
       fill: $color-accent-primary
+      animation: figureAnim1 15s infinite ease-out
     &_2
-      translate: 45.9vw -5.4vh
       z-index: 2
       fill: $color-accent-secondary
+      animation: figureAnim2 15s infinite ease-out
     &_3
-      translate: 53.3vw 9.4vh
       z-index: 1
       fill: $color-accent-tertiary
+      animation: figureAnim3 15s infinite ease-out
 
   &__secondary &__figure
     &_1
-      translate: 23vw -12vh
       z-index: 3
       background: rgba($color-accent-primary, 40%)
       fill: $color-accent-primary
     &_2
-      translate: 45.9vw -5.4vh
       z-index: 2
       background: rgba($color-accent-secondary, 50%)
       fill: $color-accent-secondary
     &_3
-      translate: 53.3vw 9.4vh
       z-index: 1
       background: rgba($color-accent-tertiary, 60%)
       fill: $color-accent-tertiary
@@ -463,3 +459,43 @@ body
   &__primary
     mix-blend-mode: color-dodge
     z-index: 1
+
+@keyframes figureAnim1
+  0%
+    translate: 23vw -12vh
+  25%
+    translate: 26vw 21vh
+  50%
+    translate: 16vw 17vh
+  75%
+    translate: 26vw 21vh
+  100%
+    translate: 23vw -12vh
+
+@keyframes figureAnim2
+  0%
+    translate: 45.9vw -5.4vh
+  25%
+    translate: 20.9vw 33.6vh
+    transform: rotate(-66deg)
+  50%
+    translate: 30.3vw 29vh
+    transform: rotate(36deg)
+  75%
+    translate: 20.9vw 33.6vh
+    transform: rotate(-66deg)
+  100%
+    translate: 45.9vw -5.4vh
+
+@keyframes figureAnim3
+  0%
+    translate: 53.3vw 9.4vh
+  25%
+    translate: 30.3vw 25.4vh
+  50%
+    translate: 27.7vw 36.9vh
+    transform: rotate(-117deg)
+  75%
+    translate: 30.3vw 25.4vh
+  100%
+    translate: 53.3vw 9.4vh
