--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @font-face {
   font-family: "ppmi";
   src: url("../fonts/PPNeueMachina-InktrapRegular.eot");
@@ -19,6 +18,11 @@
 }
 * {
   box-sizing: border-box;
+}
+
+a, button, p, span, b, h1, h2, h3, h4, h5, h6, ul, li, .tariffs-item__overlay {
+  position: relative;
+  z-index: 3;
 }
 
 body {
@@ -684,7 +688,7 @@ body {
   }
   50% {
     translate: 27.9vw 36.9vh;
-    transform: rotate(-117deg) å;
+    transform: rotate(-117deg);
   }
 }
 @keyframes figureSecondaryAnim3 {
@@ -696,6 +700,6 @@ body {
   }
   50% {
     translate: 27.9vw 36.9vh;
-    transform: rotate(-117deg) å;
+    transform: rotate(-117deg);
   }
 }/*# sourceMappingURL=style.css.map */
