--- a/css/style.sass
+++ b/css/style.sass
@@ -41,7 +41,7 @@ $gradient-primary: linear-gradient(var(--rotate), rgba($color-accent-primary, 40
 *
   box-sizing: border-box
 
-// Фикс позиционирования, для элементов которые должны быть интерактивны, и не должны быт ьперекрыты шумом
+// Фикс позиционирования, для элементов которые должны быть интерактивными, и не должны быть перекрыты шумом
 a, button, p, span, b, h1, h2, h3, h4, h5, h6, ul, li, .tariffs-item__overlay
   position: relative
   z-index: 3
@@ -55,8 +55,7 @@ a, button, p, span, b, h1, h2, h3, h4, h5, h6, ul, li, .tariffs-item__overlay
 
 body
   margin: 0
-  padding: 0
-  padding-bottom: 100px
+  padding: 0 0 100px
   background: #080715
   color: #fff
 
@@ -496,7 +495,7 @@ body
   &__primary,
   &__secondary
     position: absolute
-    filter: blur(125px)
+    filter: blur(115px)
 
   &__primary
     mix-blend-mode: color-dodge
