--- a/css/style.sass
+++ b/css/style.sass
@@ -453,6 +453,7 @@ body
 
   &__figure
     position: absolute
+    will-change: translatw, rotate, filter, mix-blend-mode
 
     &_1
       z-index: 3
