--- a/css/style.sass
+++ b/css/style.sass
@@ -444,6 +444,14 @@ body
   .logo
     margin-bottom: 22px
 
+.support
+  text-align: center
+  margin: 0 auto
+  max-width: 835px
+  margin: 300px auto 0 auto
+  &__description
+    margin-top: 49px
+
 .background
   position: absolute
 
