--- a/css/style.css
+++ b/css/style.css
@@ -585,6 +585,56 @@ body {
   z-index: 1;
 }
 
+.background__figures_support_scene:nth-child(1) .background__secondary .background__figure_1 {
+  translate: -32.5vw 6.6vh;
+  transform: scale(0.45) rotate(33deg);
+}
+.background__figures_support_scene:nth-child(1) .background__primary .background__figure_1 {
+  translate: -27.1vw -13.4vh;
+  transform: scale(0.45) rotate(-14deg);
+}
+.background__figures_support_scene:nth-child(1) .background__primary .background__figure_2 {
+  translate: -42.2vw -2.1vh;
+  transform: scale(0.45) rotate(-14deg);
+}
+.background__figures_support_scene:nth-child(1) .background__secondary .background__figure_2 {
+  translate: -33.5vw 13.9vh;
+  transform: scale(0.45) rotate(32deg);
+}
+.background__figures_support_scene:nth-child(1) .background__primary .background__figure_3 {
+  translate: -32.5vw 9.9vh;
+  transform: scale(0.45) rotate(33deg);
+}
+.background__figures_support_scene:nth-child(1) .background__secondary .background__figure_3 {
+  translate: -28.1vw 1.9vh;
+  transform: scale(0.45) rotate(-13.9deg);
+}
+
+.background__figures_support_scene:nth-child(2) .background__secondary .background__figure_1 {
+  translate: 43.5vw -11.4vh;
+  transform: scale(0.45) rotate(33deg);
+}
+.background__figures_support_scene:nth-child(2) .background__primary .background__figure_1 {
+  translate: 44.9vw -4vh;
+  transform: scale(0.45) rotate(-14deg);
+}
+.background__figures_support_scene:nth-child(2) .background__primary .background__figure_2 {
+  translate: 46.2vw 2vh;
+  transform: scale(0.45) rotate(36deg);
+}
+.background__figures_support_scene:nth-child(2) .background__secondary .background__figure_2 {
+  translate: 37vw 2.1vh;
+  transform: scale(0.45) rotate(-12deg);
+}
+.background__figures_support_scene:nth-child(2) .background__primary .background__figure_3 {
+  translate: 50vw 2.7vh;
+  transform: scale(0.45) rotate(-16deg);
+}
+.background__figures_support_scene:nth-child(2) .background__secondary .background__figure_3 {
+  translate: 45.1vw -6.5vh;
+  transform: scale(0.45) rotate(35.1deg);
+}
+
 @-moz-document url-prefix() {
   .background__primary {
     mix-blend-mode: screen;
